# temp_test_automation

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_dev_env.py  test_seton_utils.py
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  development.md  oracle_column_naming.md
src/seton_package_template/: __init__.py  main.py
src/seton_package_template/config/: __init__.py  logging_config.py  settings.py
src/seton_package_template/database/: __init__.py  queries.py
src/seton_package_template/google_sheets/: __init__.py  sheets_manager.py
src/seton_package_template/utils/: __init__.py  helpers.py
src/temp_test_automation/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_main.py
tests/test_database/: __init__.py  test_queries.py
tests/test_google_sheets/: __init__.py  test_sheets_manager.py
